# libgnome-volume-control

./: .gitignore  .gitmodules  AUTHORS  LICENSE  Makefile.am  README  README.md  autogen.sh  configure.ac
lib/: Makefile.am
po/: README
